--- a/backend/src/main/webapp/app/views/import_others/main.html
+++ b/backend/src/main/webapp/app/views/import_others/main.html
@@ -112,7 +112,7 @@
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr>
-									<th width="10%">ลำดับที่</th>
+									<th width="10%">#</th>
 									<th width="50%">ชื่อไฟล์</th>
 									<th width="10%">จำนวนเคส</th>
 									<th width="20%">วันที่นำเข้า</th>
