--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -132,7 +132,7 @@
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr>
-									<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 									
 									
 									<th style="white-space: nowrap; text-align: center;">
