--- a/backend/src/main/webapp/app/views/assigntask/main.html
+++ b/backend/src/main/webapp/app/views/assigntask/main.html
@@ -43,7 +43,7 @@
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
-									<th width="5%">ลำดับที่</th>
+									<th width="5%">#</th>
 									<th width="50%">ชื่อไฟล์</th>
 									
 									<th width="6%">Insert</th>
