--- a/backend/src/main/webapp/app/views/import_others/search.html
+++ b/backend/src/main/webapp/app/views/import_others/search.html
@@ -31,7 +31,7 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr>
-				<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 					<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						{{ h.columnNameAlias || h.columnName }}&nbsp;
