--- a/backend/src/main/webapp/app/views/payment/search.html
+++ b/backend/src/main/webapp/app/views/payment/search.html
@@ -104,7 +104,7 @@
 	<table class="table table-striped table-hover" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th width="10%">ลำดับที่</th>
+				<th width="10%">#</th>
 				<th width="60%">ชื่อไฟล์</th>
 				<th width="15%">วันที่นำเข้า</th>
 				<th width="15%"></th>
