--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -140,7 +140,8 @@
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr>
-									<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+									<th style="text-align: center;">Tags</th>
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
@@ -155,6 +156,11 @@
 								<tr ng-repeat="data in taskDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" 
 								    data-context-menu="./views/taskdetail/contextMenu1.html" style="color: #337AB7;">
 									<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+									<td style="padding: 0 1px 0 1px; vertical-align: middle;">
+										<div style="width: 150px;">
+											<tags-input ng-model="data['sys_tags']" class="ti-input-sm" on-tag-added="updateTag(data)" on-tag-removed="updateTag(data)"></tags-input>
+										</div>
+									</td>
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										
 										<div ng-show="h.dataType == 'sys_isActive'" style="text-align: center;">
@@ -347,7 +353,7 @@
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
-									<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
+									<th style="white-space: nowrap; text-align: center;">#</th>
 									<th ng-repeat="h in headersSelectedItem" style="white-space: nowrap; text-align: center;">
 										{{ h.columnNameAlias || h.columnName }}
 									</th>
