--- a/backend/src/main/webapp/app/views/trace_result_report/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_report/main.html
@@ -124,7 +124,7 @@
 			<table class="table table-striped table-hover" style="margin: 0;">
 				<thead>
 					<tr style="color: #337AB7;">
-						<th width="10%">ลำดับที่</th>
+						<th width="10%">#</th>
 						<th width="50%">ชื่อไฟล์</th>
 						<th width="25%">วันที่นำเข้า</th>
 						<th width="15%"></th>
