--- a/backend/src/main/webapp/app/views/working/tab_payment.html
+++ b/backend/src/main/webapp/app/views/working/tab_payment.html
@@ -22,7 +22,7 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr>
-				<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 				<th ng-repeat="h in headersPayment" style="white-space: nowrap; text-align: center; color: #337AB7;">
 					{{ h.columnNameAlias || h.columnName }}
 				</th>
