--- a/backend/src/main/webapp/app/views/working/tab_related.html
+++ b/backend/src/main/webapp/app/views/working/tab_related.html
@@ -3,7 +3,7 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th style="white-space: nowrap; text-align: center;">ลำดับที่</th>
+				<th style="white-space: nowrap; text-align: center;">#</th>
 				<th style="white-space: nowrap; text-align: center;">วันนัดชำระ</th>
 				<th style="white-space: nowrap; text-align: center;">วันนัด Call</th>
 				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
