--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -42,7 +42,7 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr>
-				<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
+				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 				<th style="white-space: nowrap; text-align: center;">
 					<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						วันนัด Call&nbsp;
@@ -70,7 +70,7 @@
 		<tbody>
 			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer; color: #337AB7;"
 				ng-class="{'': data['sys_compareDateStatus'] == 0, 'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
-				<td style="vertical-align: middle; text-align: center;">
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
 					<i class="fa fa-hand-o-right" ng-show="data.id == idActive"></i>
 						{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 					<i class="fa fa-hand-o-left" ng-show="data.id == idActive"></i>
