--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -31,7 +31,7 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th style="text-align: center; white-space: nowrap;">ลำดับที่</th>
+				<th style="text-align: center; white-space: nowrap;">#</th>
 				<th style="text-align: center; white-space: nowrap;">วันที่ติดตาม</th>
 				<th style="text-align: center; white-space: nowrap;">ผลการติดตาม</th>
 				<th style="text-align: center; white-space: nowrap;">เบอร์โทร</th>
