--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -44,6 +44,10 @@
 								   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
 								    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
 								  </div>
+								  <div class="form-group input-group">
+								   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+								    <input type="text" class="form-control" placeholder="tag" ng-model="formData.tag" style="width: 150px;">
+								  </div>
 							
 								  <div class="form-group" style="margin-left: 20px;">
 					                <label>{{ headers[0].columnNameAlias || headers[0].columnName }}&nbsp;</label>
