--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -45,6 +45,17 @@
 			<thead>
 				<tr>
 					<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+					
+					
+					<!-- <th style="white-space: nowrap; text-align: center;">
+						<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+							วันที่ติดตาม&nbsp;
+							<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+							<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						</a>
+					</th> -->
+					
+					
 					<th style="white-space: nowrap; text-align: center;">
 						<a href="" ng-click="columnOrder('sys_nextTimeDate')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 							วันนัด Call&nbsp;
