--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -4,9 +4,16 @@
 			<label class="control-label">ชื่อโปรดักส์ *</label>
 			<input name="productName" class="form-control" ng-model="data.productName" required>
 		</div>
+		<div class="form-group" ng-class="{'has-error':addUserForm.productName.$invalid}">
+			<label class="control-label">รอบการแจ้งเตือน (วันที่ติดตาม)</label>
+			<div class="form-group input-group" style="width: 150px;">
+				<input type="text" class="form-control" placeholder="จำนวนวัน" ng-model="data.traceDateRoundDay">
+				<span class="input-group-addon">วัน</span>
+			</div>
+		</div>
 		<div class="form-group">
 	        <label>ผลการติดตาม export-file</label>
-			<div class="checkbox">
+			<div class="checkbox">	
 			    <label>
 			      <input type="checkbox" name="excelFormat" ng-model="data.isTraceExportExcel"> Excel file
 			    </label>
