--- a/backend/src/main/webapp/app/views/product/import_payment_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_payment_conf.html
@@ -32,6 +32,7 @@
 			                    <input class="pull-left" title="เปิด/ปิด การแสดงผล" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
 			                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span>
 			                    <input class="pull-left" title="เลขที่สัญญา" name="contractNo" type="radio" ng-model="$parent.$parent.$parent.contractNoColumnName" ng-change="updateColumnName('contactNo')" ng-value="item.columnName">
+			                    <input class="pull-left" title="Sorting" name="sorting" type="radio" ng-model="$parent.$parent.$parent.sortingColumnName" ng-change="updateColumnName('sorting')" ng-value="item.columnName">
 			                    
 			                    <a href="#" e-class="form-control" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
