--- a/backend/src/main/webapp/app/views/import_others/main.html
+++ b/backend/src/main/webapp/app/views/import_others/main.html
@@ -20,7 +20,7 @@
                 	<div ui-view>
                 	
                 		<div class="panel panel-info" style="margin: 0;">
-							<div class="panel-heading">
+							<div class="panel-heading" nv-file-drop="" uploader="uploader">
 
 	                    	<!-- <h3>Upload queue</h3>
 		                    <p>Queue length: {{ uploader.queue.length }}</p> -->
