--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
 						<label class="control-label">สกุล</label>
-						<input name="lastName" class="form-control" ng-model="user.lastName" required>
+						<input name="lastName" class="form-control" ng-model="user.lastName">
 					</div>
 					<div class="form-group">
 						<label class="control-label">เบอร์โทร</label>
