--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -65,7 +65,7 @@
 									</div>
 									<div class="form-group" ng-class="{'has-error': profileForm.lastName.$invalid}">
 										<label class="control-label">สกุล</label>
-										<input name="lastName" class="form-control" ng-model="data.lastName" required>
+										<input name="lastName" class="form-control" ng-model="data.lastName">
 									</div>
 									<!-- <div class="form-group">
 										<label class="control-label">เบอร์โทร</label>
