--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -122,7 +122,9 @@
 						<th width="6%">Update</th>				
 						<th width="6%">Total</th>
 						<th width="12%">วันที่นำเข้า</th>
-						<th width="15%"></th>									
+						<th width="15%">
+							<i class="fa fa-tasks fa-lg user-action-icon-primary" ng-click="viewDetail()" title="แสดงข้อมูลทั้งหมด"></i>
+						</th>									
 					</tr>
 				<thead>
 				<tbody>
