--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -81,6 +81,17 @@
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
 		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
 		</div>
+		
+		&nbsp;&nbsp;&nbsp;
+		<div class="btn-group" style="margin: 3px 0 3px 0;">
+		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 13px 1px 3px;" ng-click="nextPrev(false)">
+		  	<i class="fa fa-caret-square-o-left fa-2x"></i>
+		  </button>
+		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 3px 1px 13px;" ng-click="nextPrev(true)">
+		  	<i class="fa fa-caret-square-o-right fa-2x"></i>
+		  </button>
+		</div>
+		
 	</div>
 	<div class="col-lg-12" style="min-height: 310px;" ng-include="lastTabActionMenuActive.url"></div>
 </div>
