Next and Previous feature

--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -1,11 +1,11 @@
 
 <div class="panel panel-info" style="margin: 0;">
 	<div class="panel-heading">
-		<form class="form-inline" ng-submit="searchBtn()">
+		<form class="form-inline" ng-submit="searchBtn('detail')">
 		
 		  <div class="form-group input-group">
 		  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-		  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="searchBtn()">
+		  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users" ng-change="searchBtn('detail')">
 				<option value="">--ทั้งหมด--</option>
 	  		</select>
 		  </div>
@@ -33,7 +33,7 @@
 					max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 					rotate="false" num-pages="numPages" style="margin: auto;" />
 		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
-			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="searchBtn('detail')"></select>&nbsp;{{'pagination.per_page' | translate}}								
 		</span>
 	</div>
 </div>
