--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -28,12 +28,12 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<div style="background-color: #356190; margin-bottom: 1px; height: 232px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
+		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
 			<div ng-repeat="f in fieldName" class="col-lg-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
-				<div class="col-lg-5" style="text-align: right; margin: 0; padding: 0 6px 18px 0; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
+				<div class="col-lg-5" style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
-				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;"
+				<div class="col-lg-7" style="padding: 1px 0 0 0; background-color: #356190; border-top: 1px solid #234E7C;"
 					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName]) : ''">
 					 
 					 <span ng-show="group1 && isEditMode">
@@ -84,10 +84,10 @@
 		
 		&nbsp;&nbsp;&nbsp;
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 13px 1px 3px;" ng-click="nextPrev(false)">
+		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 13px 1px 3px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
 		  	<i class="fa fa-caret-square-o-left fa-2x"></i>
 		  </button>
-		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 3px 1px 13px;" ng-click="nextPrev(true)">
+		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 3px 1px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
 		  	<i class="fa fa-caret-square-o-right fa-2x"></i>
 		  </button>
 		</div>
