--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -84,10 +84,10 @@
 		
 		&nbsp;&nbsp;&nbsp;
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 13px 1px 3px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
+		  <button type="button" class="btn btn-success btn-outline" style="padding: 1px 13px 1px 3px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
 		  	<i class="fa fa-caret-square-o-left fa-2x"></i>
 		  </button>
-		  <button type="button" class="btn btn-primary btn-outline" style="padding: 1px 3px 1px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
+		  <button type="button" class="btn btn-success btn-outline" style="padding: 1px 3px 1px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
 		  	<i class="fa fa-caret-square-o-right fa-2x"></i>
 		  </button>
 		</div>
