--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -111,8 +111,11 @@
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 				  <div class="panel-body">
 				  	<div class="row" ng-repeat="file in files"> 
-				  		<div class="col-lg-12" style="text-align: center;">
-						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id)">{{ file.templateName }}</button>
+				  		<div style="text-align: center;" ng-class="{'col-lg-8': haveDateInput, 'col-lg-12': !haveDateInput}">
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id, file.dateInput)" ng-disabled="file.isDateInput && !file.dateInput">{{ file.templateName }}</button>
+				  		</div>
+				  		<div class="col-lg-4" style="text-align: center;" ng-if="file.isDateInput">
+				  			<input type="text" class="form-control date-input" ng-disabled="false" readonly="readonly" date-parser="dd/MM/yyyy" ng-model="file.dateInput">
 				  		</div>
 				  	</div>
 				  </div>
