--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -9,20 +9,24 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="btn-group pull-left" style="margin: 0px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
+		  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
 		
-		<div class="checkbox" style="position: absolute; right: 20px;">
-		    <label>
-		      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList">ซ่อน Account-List
-		    </label>&nbsp;
-		    <label>
-		      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseActionPanel">ซ่อน Action-Panel
-		    </label>
-		    <label ng-show="group1">
-		      &nbsp;<input type="checkbox" ng-model="isEditMode">Edit mode
-		    </label>
-	  	</div>
+		<div class="panel panel-primary" style="position: absolute; right: 15px;">
+			<div class="panel-body" style="padding: 6px;">
+				<div class="checkbox" style="margin: 0;">
+				    <label>
+				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList">ซ่อน Account-List
+				    </label>&nbsp;
+				    <label>
+				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseActionPanel">ซ่อน Action-Panel
+				    </label>
+				    <label ng-show="group1">
+				      &nbsp;<input type="checkbox" ng-model="isEditMode">Edit mode
+				    </label>
+			    </div>
+		  	</div>
+		</div>
 	</div>
 </div>	
 
@@ -79,7 +83,7 @@
 <div class="row collapse in" id="collapseActionPanel">
 	<div class="col-lg-12">
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
+		  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
 		</div>
 		
 		&nbsp;&nbsp;&nbsp;
