--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -60,10 +60,10 @@
 									  </div>
 									  
 									  <span class="pull-right" ng-show="group1">
-				                           <button class="btn btn-outline btn-primary" ng-click="exportResult(1)" ng-show="isTraceExportExcel">
+				                           <button type="button" class="btn btn-outline btn-primary" ng-click="exportResult(1)" ng-show="isTraceExportExcel">
 				                               <i class="fa fa-file-excel-o"></i> Excel
 				                           </button>
-										   <button class="btn btn-outline btn-primary" ng-click="exportResult(3)" ng-show="isTraceExportTxt">
+										   <button type="button" class="btn btn-outline btn-primary" ng-click="exportResult(3)" ng-show="isTraceExportTxt">
 				                               <i class="fa fa-file-text-o"></i> Text
 				                           </button>
 				                           <span ng-show="isDisableNoticePrint">
