--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -16,7 +16,7 @@
 			<div class="panel-body" style="padding: 6px;">
 				<div class="checkbox" style="margin: 0;">
 				    <label>
-				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList">ซ่อน Account-List
+				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseAccList" checked="checked">ซ่อน Account-List
 				    </label>&nbsp;
 				    <label>
 				      <input type="checkbox" value="" data-toggle="collapse" data-target="#collapseActionPanel">ซ่อน Action-Panel
@@ -74,7 +74,8 @@
 	</div>
 </div>
 
-<div class="collapse in" id="collapseAccList">
+<!-- <div class="collapse in" id="collapseAccList"> -->
+<div class="collapse" id="collapseAccList">
 	<div class="row" style="margin-top: 3px; min-height: 325px;">
 		<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
 	</div>
