--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -74,7 +74,10 @@
 	</div>
 </div>
 
-<!-- <div class="collapse in" id="collapseAccList"> -->
+<!-- 
+.collapse	    Hides the content
+.collapse in	Shows the content 
+-->
 <div class="collapse" id="collapseAccList">
 	<div class="row" style="margin-top: 3px; min-height: 325px;">
 		<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
