--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">Payment</h1>
+			<h1 class="page-header">นำเข้า Payment</h1>
 		</div>
 	</div>
 	
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูล Payment&nbsp;
+                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
 					<div class="btn-group pull-right" ng-show="group0 && !isDetailPage">
 						<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 							<i class="fa fa-chevron-down"></i>
