--- a/backend/src/main/webapp/app/views/trace_result_report/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_report/main.html
@@ -1,12 +1,12 @@
 <div class="row">
 	<div class="col-lg-12">
-		<h1 class="page-header">แบบฟอร์มรายงานการติดตาม</h1>
+		<h1 class="page-header">นำเข้าแบบฟอร์มผลการติดตาม</h1>
 	</div>
 </div>
 
 <div class="panel panel-primary">
 	<div class="panel-heading">
-		<i class="fa fa-list-alt  fa-fw"></i> แสดงแบบฟอร์มรายงานการติดตาม&nbsp;
+		<i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
 		<div class="btn-group pull-right" ng-show="group0">
 			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 				<i class="fa fa-chevron-down"></i>
