--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -10,9 +10,9 @@
 	  		</select>
 		  </div>
 		
-		  <div class="form-group input-group">
+		  <div class="form-group input-group col-xs-3">
 		   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-		    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
+		    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword">
 		  </div>
 		  		  
 		   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm(false, 'detail')">{{'user.search.clear_btn' | translate}}</button>
