--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -42,7 +42,7 @@
 								
 								  <div class="form-group input-group">
 								   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-								    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
+								    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword" style="width: 150px;">
 								  </div>
 								  <div class="form-group input-group">
 								   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
