--- a/backend/src/main/webapp/app/views/trace_result_import/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_import/main.html
@@ -117,16 +117,18 @@
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
-									<th width="10%">#</th>
+									<th width="5%">#</th>
 									<th width="60%">ชื่อไฟล์</th>
+									<th width="10%">Total</th>
 									<th width="15%">วันที่นำเข้า</th>
-									<th width="15%"></th>
+									<th width="10%"></th>
 								</tr>
 							<thead>
 							<tbody>
 								<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td>{{ data.fileName }}</td>
+									<td>{{ data.rowNum | number:0 }}</td>		
 									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td>
 										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
