--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -42,6 +42,7 @@
 									  <div class="form-group input-group">
 									   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
 									    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword" style="width: 150px;">
+									    <span class="input-group-addon"><input type="checkbox" name="isHold" ng-model="formData.isHold" ng-change="search()" ></span>
 									  </div>
 									  
 									  <div class="input-group input-daterange">
