--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -151,8 +151,7 @@
 							<thead>
 								<tr>
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-									
-									
+									<th style="text-align: center">Hist.</th>
 									<th style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder('createdDateTime')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											วันที่ติดตาม&nbsp;
@@ -216,13 +215,15 @@
 							<thead>
 							<!-- <tbody class="noselect"> -->
 							<tbody>
-								<tr ng-repeat="data in traceDatas track by $index" style="color: #337AB7;" ng-click="getHis($event.target, $index)" 
+								<tr ng-repeat="data in traceDatas track by $index" style="color: #337AB7;" 
 									ng-class="{'comm-row-selected': data.selected, 'comm-bg-color-warning': data.isHold && !data.selected}"
 									data-context-menu="./views/trace_result/contextMenu1.html" ng-mousedown="rowSelect(data, $index, $event)">
 									<td style="vertical-align: middle; text-align: center;">
 										{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 									</td>
-									
+									<td style="text-align: center">
+										<i class="fa fa-list-alt fa-history" style="cursor: pointer;" ng-click="getHis($event.target, $index, data['_id'])"></i>
+									</td>
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['createdDateTime'] | date:gb_dateTimeFormat }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['resultText'] }}</td>
 									
