--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -242,9 +242,9 @@
 									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
-										   h.dataType == 'date' ? (data.taskDetail[0][h.columnName] | date:gb_dateFormat) : 
-										   h.dataType == 'num' ? (data.taskDetail[0][h.columnName] | number:2) : 
-										   h.dataType == 'sys_owner' ? data.taskDetail[0][h.columnName][0].showname : data.taskDetail[0][h.columnName] 
+										   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
+										   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : 
+										   h.dataType == 'sys_owner' ? data.taskDetail[h.columnName][0].showname : data.taskDetail[h.columnName] 
 										}}
 									</td>
 								</tr>
