--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -204,6 +204,10 @@
 										ที่อยู่ใหม่
 									</th>
 									
+									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
+										Created By
+									</th>
+									
 									<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder(h.columnName, 'taskDetail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											{{ h.columnNameAlias || h.columnName }}&nbsp;
@@ -240,11 +244,13 @@
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['address'] }}</td>
 									
+									<td style="vertical-align: middle;">{{ data['createdByName'] }}</td>
+									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
 										   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
 										   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : 
-										   h.dataType == 'sys_owner' ? data.taskDetail[h.columnName][0].showname : data.taskDetail[h.columnName] 
+										   h.dataType == 'sys_owner' ? data.taskDetail[h.columnName] : data.taskDetail[h.columnName] 
 										}}
 									</td>
 								</tr>
