--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -66,8 +66,56 @@
 								  		</select>
 									  </div>
 									  
+									  
 									  <div class="pull-right" ng-show="group1">
-				                           <div class="btn-group" ng-show="isTraceExportExcel">
+									  
+										  <div class="dropdown pull-right">
+										      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
+										        <i class="fa fa-file-excel-o"></i> Export <span class="caret"></span>
+										      </button>
+										      
+										      <ul class="dropdown-menu dropdown-menu-right">
+												  <li class="dropdown-submenu">
+													  <a tabindex="0">รายการล่าสุด</a>
+												  </li>
+												  <li class="dropdown-submenu">
+													  <a tabindex="0">ทั้งหมด</a>
+												  </li>
+											  </ul>
+										
+										      <ul class="dropdown-menu dropdown-menu-right">
+												  <li class="dropdown-submenu">
+													  <a tabindex="0"><i class="fa fa-file-excel-o"></i> Excel format</a>
+													  
+													  <ul class="dropdown-menu">
+													    <li><a tabindex="0" ng-click="exportResult(1, true)">รายการล่าสุด</a></li>
+													    <li><a tabindex="0" ng-click="exportResult(1, false)">ทั้งหมด</a></li>
+													  </ul>
+												  </li>
+												  <li class="divider"></li>
+												  <li class="dropdown-submenu">
+													  <a tabindex="0"><i class="fa fa-file-text-o"></i> Text format</a>
+													
+													  <ul class="dropdown-menu">
+													    <li><a tabindex="0" ng-click="exportResult(3, true)">รายการล่าสุด</a></li>
+													    <li><a tabindex="0" ng-click="exportResult(3, false">ทั้งหมด</a></li>
+													  </ul>
+												  </li>
+												  <li class="divider"></li>
+												  <li class="dropdown-submenu">
+													  <a tabindex="0">All format</a>
+													
+													  <ul class="dropdown-menu">
+													    <li><a tabindex="0">รายการล่าสุด</a></li>
+													    <li><a tabindex="0">ทั้งหมด</a></li>
+													  </ul>
+												  </li>
+												</ul>
+											 </div>
+									  
+									  
+									  
+				                           <!-- <div class="btn-group" ng-show="isTraceExportExcel">
 												<button type="button" class="btn btn-outline btn-primary dropdown-toggle" data-toggle="dropdown">
 											      <i class="fa fa-file-excel-o"></i> Excel <span class="caret"></span>
 											    </button>
@@ -84,7 +132,7 @@
 											      <li><a href="" ng-click="exportResult(3, true)">รายการล่าสุด</a></li>
 											      <li><a href="" ng-click="exportResult(3, false)">ทั้งหมด</a></li>
 											    </ul>
-										   </div>
+										   </div> -->
 				                           <span ng-show="isDisableNoticePrint">
 					                           	&nbsp;|&nbsp;
 											   <button type="button" class="btn btn-outline btn-primary" ng-click="exportNotices()">Print Notice</button>
