--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -89,7 +89,7 @@
 													    <li><a tabindex="0" ng-click="exportResult(1, true)">รายการล่าสุด</a></li>
 													    <li><a tabindex="0" ng-click="exportResult(1, false)">ทั้งหมด</a></li>
 													    <li class="divider"></li>
-													    <li><a tabindex="0">ไม่พบรายงาน</a></li>
+													    <li><a tabindex="0" ng-click="exportResult(1, true, true)">ขาดการติดตาม</a></li>
 													  </ul>
 												  </li>
 											  </ul>
@@ -108,8 +108,6 @@
 													  <ul class="dropdown-menu">
 													    <li><a tabindex="0" ng-click="exportResult(3, true)">รายการล่าสุด</a></li>
 													    <li><a tabindex="0" ng-click="exportResult(3, false)">ทั้งหมด</a></li>
-													    <li class="divider"></li>
-													    <li><a tabindex="0">ไม่พบรายงาน</a></li>
 													  </ul>
 												  </li>
 											  </ul>
@@ -129,7 +127,7 @@
 													    <li><a tabindex="0" ng-click="exportResult(1, true)">รายการล่าสุด</a></li>
 													    <li><a tabindex="0" ng-click="exportResult(1, false)">ทั้งหมด</a></li>
 													    <li class="divider"></li>
-													    <li><a tabindex="0">ไม่พบรายงาน</a></li>
+													    <li><a tabindex="0" ng-click="exportResult(1, true, true)">ขาดการติดตาม</a></li>
 													  </ul>
 												  </li>
 												  <li class="divider"></li>
@@ -139,23 +137,15 @@
 													  <ul class="dropdown-menu">
 													    <li><a tabindex="0" ng-click="exportResult(3, true)">รายการล่าสุด</a></li>
 													    <li><a tabindex="0" ng-click="exportResult(3, false)">ทั้งหมด</a></li>
-													    <li class="divider"></li>
-													    <li><a tabindex="0">ไม่พบรายงาน</a></li>
-													  </ul>
-												  </li>
-												  <li class="divider"></li>
-												  <li class="dropdown-submenu">
-													  <a tabindex="0">All format</a>
-													
-													  <ul class="dropdown-menu">
-													    <li><a tabindex="0">รายการล่าสุด</a></li>
-													    <li><a tabindex="0">ทั้งหมด</a></li>
-													    <li class="divider"></li>
-													    <li><a tabindex="0">ไม่พบรายงาน</a></li>
 													  </ul>
 												  </li>
 												</ul>
 											 </div>
+											 
+											 
+											 
+											 
+											 
 									   </div>
 									</div>
 								</div>
