--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -57,7 +57,7 @@
 				<td style="text-align: right; white-space: nowrap;">{{ data.appointAmount | number:2 }}</td>
 				<td style="text-align: center; white-space: nowrap;">{{ data.actionCodeText }}</td>
 				<td style="text-align: center; white-space: nowrap;">{{ data.resultCodeText }}</td>
-				<td style="white-space: nowrap;">{{ data.createdByText }}</td>
+				<td style="white-space: nowrap;">{{ data.createdByName }}</td>
 				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;  white-space: nowrap;">
 					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)" ng-show="isEditable">&nbsp;</i>
 					<i class="fa fa-home fa-lg user-action-icon-primary" title="เพิ่มที่อยู่" ng-click="askModalObj.addAddr($event, data.id)"></i>
